# TradeBee

./: .gitignore  CMakeLists.txt
BackTestEngine/: BackTestEngineBase.cpp  BackTestEngineBase.h  BackTestTraderSpi.h  SimpleBackTestEngine.cpp  SimpleBackTestEngine.h
BarSeries/: BarSeries.cpp  BarSeries.h
CTPMD/: CTPBackTestMarketDataImpl.cpp  CTPBackTestMarketDataImpl.h  CTPMarketDataBase.h  CTPMarketDataImpl.cpp  CTPMarketDataImpl.h
CTPTrader/: CTPBackTestTraderApiImpl.cpp  CTPBackTestTraderApiImpl.h  CTPTradeApiImpl.cpp  CTPTradeApiImpl.h  CTPTraderBase.cpp  CTPTraderBase.h  CTPTraderCallBack.cpp  CTPTraderCallBack.h
DataStruct/: TradeBeeDataConvert.cpp  TradeBeeDataStruct.h
EventBase/: EventPublisherBase.cpp  EventPublisherBase.h  EventSubscriberBase.cpp  EventSubscriberBase.h
ForceTestEngine/: ForceTestEngine.cpp  ForceTestEngine.h
KWeightStrategy/: KWeightStrategy.cpp  KWeightStrategy.h
M1Strategy/: M1Strategy.cpp  M1Strategy.h
Message/: BarMessage.h  CTPTickMessage.cpp  CTPTickMessage.h  MessageBase.cpp  MessageBase.h  OrderMessage.h  TradeMessage.h
Monitor/: MonitorBase.h  StrategyPositionMonitor.cpp  StrategyPositionMonitor.h
SohaDataCenter/: SohaDataCenterStrategy.cpp  SohaDataCenterStrategy.h
StrategyBase/: StrategyBase.cpp  StrategyBase.h
TraderBase/: TraderBase.cpp  TraderBase.h  TraderCallBackBase.cpp  TraderCallBackBase.h
TraderProxy/: TraderProxy.cpp  TraderProxy.h
comm/: CircularArray.h  RingBuffer.h  Timer.h  pubilc.h  public.cpp
comm/ThreadPool/: ThreadPool.h  example.cpp
comm/logger/: BaseLoggerSpdImpl.cpp  BaseLoggerSpdImpl.h  IBaseLogger.h  IBaseLoggerImpl.h  LogManager.h  (+1 more)
framework/: main.cpp
(+2 files in other folders)
